Fix spotlights center align issues

--- a/src/css/spotlight.css
+++ b/src/css/spotlight.css
@@ -3,7 +3,7 @@
 
 /* "Quote" (wooden box) stuff */
 .quote_box {
-  height: 500px;
+  height: fit-content;
   border-radius: 30px;
   background-image: url("../../images/banner_3.jpg");
   background-size: contain;
@@ -15,6 +15,7 @@
   border-radius: 30px;
   width: 100%;
   height: 100%;
+  padding-bottom: 10px;
 }
 
 /* Spotlight stuff */
@@ -22,7 +23,11 @@
   pointer-events: none;
   position: absolute;
   top: 125px;
-  left: 150px;
+  margin: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 1;
 }
 
 h2 {
@@ -41,8 +46,9 @@ h2:hover {
   font-family: "Time Font";
   color: rgba(69, 1, 107, 0.913);
   font-size: 70px;
-  margin: 30px;
+  margin: auto;
   text-shadow: 2px 2px 7px rgba(0, 0, 0, 0.7);
+  max-width: 600px;
 }
 
 .name {
@@ -65,10 +71,10 @@ hr {
 
 .quote_list {
   display: flex;
-  height: 375px;
+  height: fit-content;
   padding-left: 0;
-  white-space: nowrap;
   list-style: none;
+  justify-content: center;
 }
 
 .quote_list img {
@@ -96,34 +102,21 @@ hr {
   scale: 1.3;
 }
 
-.quote1 {
+.quote-common {
   margin-left: 40px;
   margin-right: 40px;
   padding: 5px;
-  min-width: 500px;
-  line-height: 1em;
-  height: 350px;
+  padding-bottom: 10px;
+  width: 30%;
+  height: fit-content;
   background-color: rgba(0, 0, 0, 0.368);
   border-radius: 30px;
   box-sizing: border-box;
   color: aliceblue;
   font-family: "Quote Font";
   transition: opacity 0.5s ease-in-out;
-}
-
-.quote2 {
-  margin-left: 40px;
-  margin-right: 40px;
-  padding: 5px;
-  min-width: 500px;
-  height: 350px;
-  font-size: 18px;
-  background-color: rgba(0, 0, 0, 0.368);
-  border-radius: 30px;
-  box-sizing: border-box;
-  color: aliceblue;
-  font-family: "Quote Font";
-  transition: opacity 0.5s ease-in-out;
+  word-wrap: normal;
+  line-height: 2em;
 }
 
 
@@ -240,6 +233,7 @@ hr {
   padding-top: 10px;
   padding-bottom: 10px;
   margin: 30px;
+  margin-bottom: 20px;
   border-radius: 30px;
   border-style: groove;
   border-width: 2px;
